--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
     <title>Curriculum vitae</title>
+    <script src="./js/codigo.js"></script>
+    <link href="./fontawesome/css/all.css" rel="stylesheet">
 </head>
 
 <body>
@@ -21,40 +23,49 @@
     <div class="row" id="section-1">
         <div class="column-1">
             <h2>Curriculum vitae</h2>
+            <i class="fas fa-id-card"></i>
         </div>
     </div>
 
     <!--Menú de navegación-->
     <ul>
         <li><a href="#section-1">Inicio</a></li>
-        <li><a href="#section-2">¿Quien soy?</a></li>
-        <li><a href="#section-3">Contacto</a></li>
-        <li><a href="#section-4">Estudios</a></li>
-        <li><a href="#section-5">Objetivo profesional</a></li>
-        <li><a href="#section-6">Competencias</a></li>
-        <li><a href="#section-7">Idiomas</a></li>
-        <li><a href="#section-8">Formacion</a></li>
-        <li><a href="#section-9">Software</a></li>
+        <li><a href="#section-2">¿Quién soy?</a></li>
+        <li><a href="#section-3">Vídeo</a></li>
+        <li><a href="#section-4">Contacto</a></li>
+        <li><a href="#section-5">Estudios</a></li>
+        <li><a href="#section-6">Objetivo profesional</a></li>
+        <li><a href="#section-7">Competencias</a></li>
+        <li><a href="#section-8">Idiomas</a></li>
+        <li><a href="#section-9">Formacion</a></li>
         <li><a href="#section-10">Experiencia laboral</a></li>
     </ul>
 
 
     <div class="row relleno lateral" id="section-2">
         <div class="column-2">
-            <h1>Datos personales</h1>
-            <h2>Nombre: Jordi Reyes Domínguez</h2>
-            <h2>Fecha de nacimiento: 17-01-2003</h2>
-            <h2>Edad: 18</h2>
-            <h2>Residencia: Sant Andreu de la Barca</h2>
+            <h1>¿Quién soy?</h1>
+            <h2>Hola, soy Jordi Reyes Domínguez, naci un 17 de enero de 2003 asi que tengo 18 años. Ahora mismo estoy estudiando un grado medio de informática en el centro Joan XXIII en Hospitalet, mis aficiones o hobbies son dibujar, montar maquetas y coleccionar
+                material policial, ya sean placas, parches y demas. Tambien me gusta jugar al tenis ya sean partidos o entrenamientos.</h2>
+
         </div>
         <div class="column-2">
             <img src="./img/IMG_20210419_120305.jpg" alt="imagen telefono">
         </div>
     </div>
 
-    <div class="row relleno lateral" id="section-3">
+    <div class="row relleno-lateral" id="section-3">
+        <div class="column-1">
+            <h1>Vídeo presentacion</h1>
+        </div>
+        <div class="column1">
+            <iframe width="956" height="538" src="https://www.youtube.com/embed/0yeXvs5VoME" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
+    </div>
+
+    <div class="row relleno lateral" id="section-4">
         <div class="column-2">
-            <img src="./img/iconos-azules-contacto_23-2147502516.jpg" alt="imagen telefono">
+            <img src="./img/iconos-azules-contacto_23-2147502516-removebg-preview.png" alt="imagen telefono">
         </div>
         <div class="column-2">
             <h1>Datos de contacto</h1>
@@ -64,17 +75,23 @@
         </div>
     </div>
 
-    <div class="row relleno lateral" id="section-4">
+    <div class="row relleno lateral" id="section-5">
         <div class="column-2">
             <h1>Estudios</h1>
-            <h2>La ESO en el colegio Sant Josep en Sant Sadurni d´Anoia</h2>
+            <h2>Estudio: Primaria y la ESO</h2>
+            <h2>Centro: Sant Josep en Sant Sadurni d´Anoia</h2>
+            <h2>Tiempo: 2009-2019</h2>
+            <h2>Estudio actual: Tecnico en sistemas microinformaticos y redes</h2>
+            <h2>Centro: Joan XXIII en Hospitalet</h2>
+            <h2>Tiempo: 2019-actualmente</h2>
         </div>
-        <div class="column-2">
-            <img src="./img/antiguos-libros-tomos-wallpaper-preview.jpg" alt="imagen telefono">
+        <div class="column-2 relleno-columnas">
+            <iframe id="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2995.113370557405!2d2.1050974155045576!3d41.3498894792676!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12a498d64bd023fd%3A0x26089fc39cb352a3!2sCentro%20de%20Estudios%20Joan%20XXIII!5e0!3m2!1ses!2ses!4v1616168167159!5m2!1ses!2ses"
+                allowfullscreen="" loading="lazy"></iframe>
         </div>
     </div>
 
-    <div class="row relleno-lateral" id="section-5">
+    <div class="row relleno-lateral" id="section-6">
         <div class="column-2">
             <img src="./img/policia-nacional-escudo-290x300.png" alt="imagen telefono">
         </div>
@@ -84,7 +101,7 @@
         </div>
     </div>
 
-    <div class="row relleno-lateral" id="section-6">
+    <div class="row relleno-lateral" id="section-7">
         <div class="column-2">
             <h1>Competencias personales</h1>
             <h2>Autonomia: Bien</h2>
@@ -105,7 +122,7 @@
         </div>
     </div>
 
-    <div class="row relleno-lateral" id="section-7">
+    <div class="row relleno-lateral" id="section-8">
         <div class="column-2">
             <h1>Idiomas</h1>
             <h2>Castellano: Muy bien</h2>
@@ -113,13 +130,13 @@
             <h2>Ingles: Bien</h2>
         </div>
         <div class="column-2">
-            <img src="./img/1-idioma-diccionarios.jpg" alt="imagen telefono">
+            <img src="./img/1-idioma-diccionarios-removebg-preview.png" alt="imagen telefono">
         </div>
     </div>
 
-    <div class="row relleno-lateral" id="section-8">
+    <div class="row relleno-lateral" id="section-9">
         <div class="column-2">
-            <img src="./img/productivity-1995786_640.jpg" alt="imagen telefono">
+            <img src="./img/productivity-1995786_640-removebg-preview.png" alt="imagen telefono">
         </div>
         <div class="column-2">
             <h1>Formacion</h1>
@@ -129,12 +146,10 @@
         </div>
     </div>
 
-    <div class="row relleno-lateral" id="section-9">
+    <div class="row relleno-lateral" id="section-10">
         <div class="column-2">
-            <h1>Software</h1>
-            <h2>Sistemas operativos: Bien</h2>
-            <h2>Excel: Regular</h2>
-            <h2>Adobe Photoshop: Bien</h2>
+            <h1>Experiencia laboral</h1>
+            <h2>De momento no he tendio experiencia laboral</h2>
         </div>
         <div class="column-2">
             <img src="./img/software.jpg" alt="imagen telefono">
